SERVER-107707: Investigate segfault when trying to use kRange in sampling CE bm (#39305)

GitOrigin-RevId: 5ea818d70c2edff0f9388e460c14da86785d819b